@@ -1,0 +1,31 @@
+# "check-excl-rings-05.prsimrc"
+#	$Id: check-excl-rings-05.prsimrc,v 1.1 2006/06/01 04:12:48 fang Exp $
+# @haco@ check-excl-rings.haco-a
+
+# default: checkexcl
+
+watchall
+set a 1
+set b 1
+cycle
+
+set a 0
+cycle
+
+# xy-ring is locked
+initialize
+# initialize should clear the lock
+
+set b 1
+cycle
+set a 0
+cycle
+
+# OK
+initialize
+
+set a 1
+cycle
+set b 0
+cycle
+
