@@ -1,0 +1,14 @@
+	0	a : 1
+	0	b : 1
+	10	x : 0	[by a:=1]
+	10	y : 0	[by b:=1]
+	10	a : 0
+	20	x : 1	[by a:=0]
+	0	b : 1
+	10	y : 0	[by b:=1]
+	10	a : 0
+	20	x : 1	[by a:=0]
+	0	a : 1
+	10	x : 0	[by a:=1]
+	10	b : 0
+	20	y : 1	[by b:=0]
